added user login details

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 <body>
 
   <form action="">
-    
+    <h1>Log In</h1>
+
+    <label>Username:</label>
+    <input class="user-input username-input js-username-input" type="text" placeholder="enter your email">
+
+    <label>Password</label>
+    <input class="user-input password-input js-password-input" type="password" placeholder="">
+
+    <input type="submit" value="login" class="login-button js-login-button">
+
+
+
+
+
 
 
 
